# raven

./: AGENTS.md  CHANGELOG.md  PLAN.md  README.md  justfile  package-lock.json  package.json  vitest.config.ts
.opencode/skills/update/: SKILL.md
crates/raven-daemon/: Cargo.toml
crates/raven-daemon/src/: main.rs  protocol.rs  server.rs  session.rs
crates/raven-daemon/tests/: integration_tests.rs
docs/: lsp-architecture.md
public/tree-sitter/: tree-sitter-html.wasm
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: daemon.rs  file.rs  lib.rs  pty.rs
src-tauri/src/lsp/: manager.rs  mod.rs  protocol.rs  server.rs  transport.rs
src/components/: CursorPopup.css  CursorPopup.tsx  EditorSurface.css  EditorSurface.tsx  FileFinder.css  FileFinder.tsx  ResizeHandle.css  ResizeHandle.tsx  Surface.css  Surface.tsx  SurfaceNode.css  SurfaceNode.tsx  TerminalSurface.css  TerminalSurface.tsx  TopBar.css  TopBar.tsx  WindowChrome.css  WindowChrome.tsx  Workspace.css  Workspace.tsx
src/components/icons/: icons.css  index.tsx
src/editor/: buffer.ts  commands.ts  editor.ts  highlighting.ts  history.ts  vim.ts
src/lsp/: client.ts  types.ts
src/store/: editor.ts  fileFinder.ts  lsp.ts  project.ts  session.ts  surface.ts
src/styles/: global.css
src/test/: buffer.test.ts  commands.test.ts  cursorPopup.test.ts  editor.test.ts  editorStore.test.ts  fuzzy.test.ts  history.test.ts  lsp.test.ts  session.test.ts  setup.ts  surface.test.ts  vim.test.ts
src/utils/: fuzzy.ts  markdown.ts  session.ts
